# ComputerVision_Legacy

./: CMakeLists.txt  Image Processing.sln  ProgrammingStyleGuide.txt  README.md  Timer.h  main.cpp
Computer Vision/: ColorConversion.h  Computer Vision.vcxproj  Image Processing.vcxproj.filters  Image.cpp  Image.h  Timer.h  main.cpp
Computer Vision/Imgproc/: ArithmaticOperations.h  ArithmeticOperations.h  Blur.h  Canny.h  ColorConversion.h  ConvertColor.h  Convolution.h  DrawShapes.h  EdgeDetection.h  Filters.h  ImageOperations.h  MathConstants.h  Ransac.h
Computer Vision/Imgproc/CUDA/: ColorConversion.cu  Convolution.cu  Filter.cu  Filters_cuda.h  gpuImage.cpp  gpuImage.h
Computer Vision/Video/: Video.cpp  Video.h
Core/: CMakeLists.txt  Image.cpp  Window.cpp
Core/include/: CpuFeatures.h  Image.h  Window.h
Imgproc/: ArithmeticOperations.h  Blur.h  CMakeLists.txt  Canny.h  ColorConversion.cuh  ColorConversion.h  Convolution.h  Convolutions.h  DrawShapes.h  HarrisCorner.h  HarrisCornerDetector.h  ImageOperations.h  MathConstants.h  PixelTransforms.h  SIFT.h
Imgproc/CUDA/: Convolution.cu
Imgproc/CUDA/include/: gpuImage.h
SIMD/: CMakeLists.txt  SimdAllocator.cpp  SimdCPUBase.cpp
SIMD/include/: SimdAVX2Enable.h  SimdAVXEnable.h  SimdAlignment.h  SimdAllocator.h  SimdCPU.h  SimdDefs.h  SimdEnable.h  SimdMath.h  SimdMemory.h  SimdSSE2Enable.h  SimdSSE41Enable.h
